fix: align form and non-form elements in navs

--- a/app/scss/ila.scss
+++ b/app/scss/ila.scss
@@ -165,6 +165,9 @@ header.microblog {
 		margin: 0;
 		padding: 5px 0;
 		color: $muted-text;
+		form {
+			margin-block: 0;
+		}
 	}
 	> * {
 		white-space: nowrap;
